@@ -1,5 +1,7 @@
 2001-06-15  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Index.pm (verify): Turn off "void" warnings in rule verification
+
 	* Recipe.pm (_parse_recursively): Force "real" line numbers now
 	that I have woken up over #line
 
